--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="">Séries</a></li>
                 <li><a href="">Categorias</a></li>
                 <li><a href="">Preço</a></li>
-                <li><a href="">Sobre</a></li>
+                <li><a href="">alouuu</a></li>
               </ul>
               <ul>
                 <li> <i class="fa-solid fa-magnifying-glass"></i></li>
