--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <li> <i class="fa-solid fa-bars"></i> </li>
             </ul>
         </nav>
-        <h1 class="animate__animated animate__backInLeft">Descrubra <br> Conecte-se e emocione-se</h1>
-        <h2 class="animate__animated animate__backInLeft">Encontre os lançamentos de filmes imperdíveis e viva emoções incríveis!</h2>
+        <h1 class="animate__animated animate__backInRight">Descrubra <br> Conecte-se e emocione-se</h1>
+        <h2 class="animate__animated animate__backInRight">Encontre os lançamentos de filmes imperdíveis e viva emoções incríveis!</h2>
         <ul class="btn animate__animated animate__backInLeft">
             <li class="btn__start"><a  href="">Começar</a></li>
             <li class="btn__plan"><a  href="">Planos</a></li>
